--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,6 +26,9 @@
         </div>
     </form>
 </div>
+<div>
+    <img class="wonder-image" src="wonder-img.png">
+</div>
 
 <script src="script.js"></script>
 
